--- a/cross-drawer-master/CrossDrawer.Android/Resources/layout/recentsLayout.axml
+++ b/cross-drawer-master/CrossDrawer.Android/Resources/layout/recentsLayout.axml
@@ -4,32 +4,30 @@
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
-    <GridLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/gridLayout1">
-        <ImageView
-            android:src="@drawable/ic_favorite_border_black_24dp"
-            android:padding="0dip"
-            style="?android:attr/borderlessButtonStyle"
-            android:id="@+id/favButton"
-            android:layout_margin="0dip"
-            android:layout_marginTop="0.0dp"
-            android:layout_column="0" />
-        <TextView
-            android:textAppearance="?android:attr/textAppearanceMedium"
-            android:id="@+id/textView1"
-            local:MvxBind="Text Full_Name "
-            android:paddingTop="40px"
-            android:layout_gravity="center_horizontal"
-            android:layout_column="1" />
-        <ImageView
-            android:src="@drawable/ic_keyboard_arrow_right_black_24dp"
-            android:padding="0dip"
-            style="?android:attr/borderlessButtonStyle"
-            android:id="@+id/favButton"
-            android:layout_margin="0dip"
-            android:layout_marginTop="0.0dp"
-            android:layout_column="2" />
-    </GridLayout>
+  <GridLayout
+      android:layout_width="match_parent"
+      android:layout_height="wrap_content"
+      android:id="@+id/gridLayout1">
+    <ImageView
+        android:src="@drawable/ic_favorite_border_black_24dp"
+        android:padding="0dip"
+        android:id="@+id/favButton"
+        android:layout_margin="0dip"
+        android:layout_marginTop="0.0dp"
+        android:layout_column="0" />
+    <TextView
+        android:textAppearance="?android:attr/textAppearanceMedium"
+        android:id="@+id/textView1"
+        local:MvxBind="Text Full_Name "
+        android:paddingTop="40px"
+        android:layout_gravity="center_horizontal"
+        android:layout_column="1" />
+    <ImageView
+        android:src="@drawable/ic_keyboard_arrow_right_black_24dp"
+        android:padding="0dip"
+        android:id="@+id/favarrow"
+        android:layout_margin="0dip"
+        android:layout_marginTop="0.0dp"
+        android:layout_column="2" />
+  </GridLayout>
 </LinearLayout>
